network-policies/heroes-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: heroes-service
    name: heroes-db-lb
    system: quarkus-super-heroes
  name: heroes-db-lb
  namespace: app-demo
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: heroes-db
  sessionAffinity: None
  type: LoadBalancer
  loadBalancer: {}
